# ezChat

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  build.rs  package.json  pnpm-lock.yaml  shell.nix
.serena/: project.yml
.serena/memories/: style_and_conventions.md  suggested_commands.md  task_completion.md
assets/: main.css  tailwind.css
assets/fonts/IBM Plex/: IBMPlexSans-Bold.woff2.import  IBMPlexSans-BoldItalic.woff2.import  IBMPlexSans-ExtraLight.woff2.import  IBMPlexSans-ExtraLightItalic.woff2.import  IBMPlexSans-Italic.woff2.import  IBMPlexSans-Light.woff2.import  IBMPlexSans-LightItalic.woff2.import  IBMPlexSans-Medium.woff2.import  IBMPlexSans-MediumItalic.woff2.import  IBMPlexSans-Regular.woff2.import  IBMPlexSans-SemiBold.woff2.import  IBMPlexSans-SemiBoldItalic.woff2.import  IBMPlexSans-Text.woff2.import  IBMPlexSans-TextItalic.woff2.import  IBMPlexSans-Thin.woff2.import  IBMPlexSans-ThinItalic.woff2.import
assets/fonts/Lilex/: Lilex-Bold.ttf.import  Lilex-BoldItalic.ttf.import  Lilex-ExtraLight.ttf.import  Lilex-ExtraLightItalic.ttf.import  Lilex-Italic.ttf.import  Lilex-Medium.ttf.import  Lilex-MediumItalic.ttf.import  Lilex-Regular.ttf.import  Lilex-Thin.ttf.import  Lilex-ThinItalic.ttf.import
assets/icons/: plus.svg.import
assets/images/: cat.png.import  screenshot_test.png.import  screenshot_test2.png.import
src/: app.css  app.html  lib.rs  main.rs  main_old.rs  modal.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/: InputPanel.svelte  LeftPanel.svelte  MainPanel.svelte  MessageBubble.svelte  ResizableHandle.svelte  RightPanel.svelte  (+1 more)
src/routes/: +layout.svelte  +page.svelte
ui/: app-window.slint  dropdown.slint  left-sidebar.slint  palette.slint
ui/_old/: app-window.old.slint  custom_button.old.slint  dropdown.old.slint
ui/old/: app-window.slint  channels-list.slint  dropdown.slint  left-sidebar.slint
(+32 files in other folders)
