[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.14.1", features = [
    "backend-android-activity-06",
    "renderer-skia",
    "live-preview",
    "backend-winit",
] }
i-slint-backend-winit = { version = "=1.14.1", features = ["renderer-skia"] }
winit = "0.30.12"

[build-dependencies]
slint-build = "1.14.1"
